--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "fs": "^0.0.1-security",
     "jest": "^27.5.1",
     "lowdb": "^1.0.0",
+    "net": "^1.0.2",
     "prompt": "^1.2.2",
     "request": "^2.88.2",
     "requires": "^1.0.2",
